apps/shoppingo/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shoppingo
  labels:
    name: shoppingo
