apps/shoppingo/base/traefik-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: shoppingo-strip-prefixes
  labels:
    app: shoppingo
spec:
  stripPrefix:
    prefixes:
      - /auth
      - /api
