apps/shoppingo/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppingo-api
  labels:
    app: shoppingo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shoppingo-api
  template:
    metadata:
      labels:
        app: shoppingo-api
    spec:
      containers:
        - name: shoppingo-api
          image: 192.168.68.54:31834/shoppingo-shoppingo-api:latest
          ports:
            - containerPort: 4001
