apps/shoppingo/base/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppingo-web
  labels:
    app: shoppingo-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shoppingo-web
  template:
    metadata:
      labels:
        app: shoppingo-web
    spec:
      containers:
        - name: shoppingo-web
          image: 192.168.68.54:31834/shoppingo-web:placeholder
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html/config.json
              subPath: config.json
      volumes:
        - name: config-volume
          configMap:
            name: frontend-config
