apps/shoppingo/base/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shoppingo-mongodb
  labels:
    app: shoppingo-mongodb
spec:
  selector:
    app: shoppingo-mongodb
  ports:
    - port: 27017
      targetPort: 27017
      nodePort: 30017
      name: mongodb
  type: NodePort
