apps/shoppingo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shoppingo
spec:
  selector:
    app: shoppingo
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
