apps/shoppingo/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shoppingo-web
  labels:
    app: shoppingo-web
spec:
  selector:
    app: shoppingo-web
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
      name: web
  type: NodePort
