apps/shoppingo/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shoppingo-ingress
  labels:
    app: shoppingo
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: shoppingo-staging-shoppingo-strip-prefixes@kubernetescrd
spec:
  rules:
    - host: shoppingo.imapps.staging
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: kivo
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: shoppingo-api
                port:
                  number: 4001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shoppingo-web
                port:
                  number: 80
